deployment/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

  type: ClusterIP
